--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!--The following lines are for the font-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <title>My Pomodoro</title>
 </head>
 <body>
+    <div id="topnav">
+        <div class="profile">
+            <img class="profilepic" src="images/doggo.jpg">
+            <span class="username">username</span>
+        </div>
+    </div>
     <div id="container">
         <header>
             <h1>My Pomodoro</h1>
@@ -18,7 +29,7 @@
                 <li><button onclick="changeTo(settings)" class="nav-button gen-button">Settings</button></li>
             </ul>
         </header>
-        <div id="main">
+        <div class="main">
             <div class="section" id="study">
                 <p><span id="work-break">Work</span> session #<span id="interval-count">1</span></p>
                 <p id="time">
@@ -65,8 +76,8 @@
             </div>
         </div> 
     </div>
-    <script src="colorchange.js"></script>
-    <script src="timer.js"></script>
-    <script src="sectionchange.js"></script>
+    <script src="colorchange.js" defer></script>
+    <script src="timer.js" defer></script>
+    <script src="sectionchange.js" defer></script>
 </body>
 </html>
